runtime-policies/portforward/policy.yaml
apiVersion: admissionregistration.x-k8s.io/v1alpha1
kind: ValidatingAdmissionPolicy
metadata:
  name: cluster-policy-portforward
spec:
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["UPDATE", "PATCH", "CONNECT"]
      resources:   ["pods/portforward"]
  failurePolicy: Fail
  validations:
  - expression: "false"
    message: "portforward is not allowed"
    reason: "High"
---
apiVersion: admissionregistration.x-k8s.io/v1alpha1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: cluster-policy-portforward-binding
spec:
  policyName: cluster-policy-portforward
  validationActions:
  - Audit
